[gd_scene load_steps=71 format=2]

[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Tomas/Tomas.gd" type="Script" id=2]
[ext_resource path="res://Player/Tomas/SwordHitbox.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Tomas/Tomas.png" type="Texture" id=5]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=6]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://White.shader" type="Shader" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 89, 90, 91 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 73, 74, 75 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=53]
resource_name = "PrepareDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}

[sub_resource type="Animation" id=57]
resource_name = "PrepareLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 88 ]
}

[sub_resource type="Animation" id=56]
resource_name = "PrepareRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 72 ]
}

[sub_resource type="Animation" id=55]
resource_name = "PrepareUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 80 ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "roll_animation_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=15]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=16]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=17]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 23 )
blend_point_4/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "PrepareLeft"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "PrepareDown"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "PrepareUp"

[sub_resource type="AnimationNodeAnimation" id=61]
animation = "PrepareRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=54]
auto_triangles = false
blend_point_0/node = SubResource( 58 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 59 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 60 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 61 )
blend_point_3/pos = Vector2( 1, 0 )
triangles = PoolIntArray( 0, 1, 3, 0, 2, 3 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RollDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=39]
blend_point_0/node = SubResource( 35 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 38 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachine" id=47]
states/Attack/node = SubResource( 24 )
states/Attack/position = Vector2( 186, 126 )
states/Idle/node = SubResource( 29 )
states/Idle/position = Vector2( 433, 126 )
states/Prepare/node = SubResource( 54 )
states/Prepare/position = Vector2( 433, 287 )
states/Roll/node = SubResource( 34 )
states/Roll/position = Vector2( 535, -5 )
states/Run/node = SubResource( 39 )
states/Run/position = Vector2( 705, 126 )
transitions = [ "Idle", "Run", SubResource( 40 ), "Run", "Idle", SubResource( 41 ), "Roll", "Idle", SubResource( 44 ), "Idle", "Roll", SubResource( 45 ), "Run", "Roll", SubResource( 46 ), "Idle", "Prepare", SubResource( 62 ), "Prepare", "Attack", SubResource( 63 ), "Attack", "Idle", SubResource( 64 ) ]
start_node = "Idle"
graph_offset = Vector2( -70, -67 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=48]

[sub_resource type="CapsuleShape2D" id=49]
radius = 7.12394
height = 11.7461

[sub_resource type="CapsuleShape2D" id=50]
radius = 5.0
height = 4.0

[sub_resource type="Animation" id=51]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=52]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Tomas" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -6 )
texture = ExtResource( 5 )
hframes = 8
vframes = 13
frame = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 3 )
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/AttackUp = SubResource( 6 )
anims/IdleDown = SubResource( 7 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 9 )
anims/IdleUp = SubResource( 10 )
anims/PrepareDown = SubResource( 53 )
anims/PrepareLeft = SubResource( 57 )
anims/PrepareRight = SubResource( 56 )
anims/PrepareUp = SubResource( 55 )
anims/RollDown = SubResource( 11 )
anims/RollLeft = SubResource( 12 )
anims/RollRight = SubResource( 13 )
anims/RollUp = SubResource( 14 )
anims/RunDown = SubResource( 15 )
anims/RunLeft = SubResource( 16 )
anims/RunRight = SubResource( 17 )
anims/RunUp = SubResource( 18 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 47 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 48 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( -0.00206828, 0.132392 )
parameters/Prepare/blend_position = Vector2( -0.0136986, 0.723574 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( -0.00206828, 0.10951 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = 4.71239

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 1 )]
position = Vector2( 15, 0 )
collision_mask = 8
script = ExtResource( 3 )
damage = 2

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
visible = false
position = Vector2( -6.46145, 0.374577 )
shape = SubResource( 49 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 4
collision_mask = 0
INVINCIBILITY_DURATION = 1.0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 50 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Blink" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 51 )
anims/Stop = SubResource( 52 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_finished" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_finished"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="HitboxPivot/Hitbox"]
[editable path="Hurtbox"]
